# braided-autoresearch

./: .gitignore  BRAIDED_AUTORESEARCH_PLAN.md  Makefile  README.md  REPORT.md  pyproject.toml  report_audit.json
braided/: accept.py  cli.py  config.py  context.py  engine.py  graph.py  ledger.py  patching.py  privacy.py  runner.py  tasks.py  tui.py  verify.py
braided/agents/: classifier.py  directions.py  llm.py  merger.py  proposer.py
braided/report/: compare.py  final.py  graph_html.py  graphjson.py  heldout.py  interaction.py  replication.py  tree.py
braided/scheduler/: braided.py  greedy.py  tree.py
docs/: DEMO.md  SLIDES.md  phase-0-summary.md  phase-1-summary.md  phase-2-summary.md  phase-3-summary.md  phase-4-summary.md  phase-5-summary.md
scripts/: make_bakeoff_config.py
tasks/cpu-optimize/: task.yaml
tasks/cpu-optimize/template/: README.md  heldout_score.py  pipeline.py  score.py  score_common.py
tasks/nanogpt/: task.yaml
tasks/nanogpt/template/: README.md  heldout_score.py  score.py  score_common.py  train.py
tests/: test_braided.py  test_config.py  test_cpu_task.py  test_engine.py  test_graph_ledger.py  test_patching.py  test_runner.py  test_tree.py  test_tui_report.py
