[project]
name = "braided-autoresearch"
version = "0.1.0"
description = "Git-DAG autoresearch: bandit-scheduled branching, agent-mediated semantic merges, cross-lineage replication tagging"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "rich>=13.7",
    "matplotlib>=3.8",
]

[project.scripts]
braided = "braided.cli:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["braided"]

[project.optional-dependencies]
nanogpt = ["torch>=2.3"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: long-running end-to-end tests"]
